--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
+    "@types/opencc-js": "^1.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
